--- a/appc.json
+++ b/appc.json
@@ -1,6 +1,11 @@
 {
-	"type":"connector",
-	"group":"arrow",
-	"dependencies": {
-	}
+  "type": "connector",
+  "group": "arrow",
+  "access": "public",
+  "owners": [
+    "jhaynie@appcelerator.com",
+    "dtoth@appcelerator.com",
+    "mgoff@appcelerator.com",
+    "rblalock@appcelerator.com"
+  ]
 }
