--- a/package.json
+++ b/package.json
@@ -1,35 +1,55 @@
 {
-    "name": "appc.box",
-    "description": "Connector for the Box View API.",
-    "version": "1.0.1",
-    "author": "Rick Blalock",
-    "license": "Apache-2.0",
-    "framework": "none",
-    "keywords": [
-        "appcelerator",
-        "arrow",
-        "box"
-    ],
-    "repository": {},
-    "private": true,
-    "dependencies": {
-        "async": "^0.9.0",
-        "box-view": "^1.2.0",
-        "lodash": "^2.4.1",
-        "pkginfo": "^0.3.0"
-    },
-    "devDependencies": {
-        "arrow": "*",
-        "grunt": "^0.4.5",
-        "grunt-contrib-clean": "^0.6.0",
-        "grunt-contrib-jshint": "^0.10.0",
-        "grunt-kahvesi": "^0.1.0",
-        "grunt-mocha-test": "^0.12.0",
-        "mocha": "^1.21.4",
-        "request": "^2.55.0",
-        "should": "^4.0.4"
-    },
-    "scripts": {
-        "test": "grunt"
-    }
+  "name": "appc.box",
+  "description": "Connector for the Box View API.",
+  "version": "1.1.0",
+  "author": "Rick Blalock",
+  "license": "Apache-2.0",
+  "framework": "none",
+  "keywords": [
+    "appcelerator",
+    "arrow",
+    "box"
+  ],
+  "repository": {},
+  "private": true,
+  "dependencies": {
+    "async": "^0.9.0",
+    "box-view": "^1.2.0",
+    "lodash": "^2.4.1",
+    "pkginfo": "^0.3.0"
+  },
+  "devDependencies": {
+    "arrow": "*",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-kahvesi": "^0.1.0",
+    "grunt-mocha-test": "^0.12.0",
+    "mocha": "3.3.0",
+    "nsp": "2.6.3",
+    "nyc": "10.2.0",
+    "request": "^2.55.0",
+    "retire": "1.2.12",
+    "rimraf": "2.6.1",
+    "should": "11.2.1",
+    "sinon": "2.1.0",
+    "snazzy": "7.0.0",
+    "standard": "10.0.2",
+    "tap": "10.3.2"
+  },
+  "scripts": {
+    "start": "appc run",
+    "lint": "standard --fix",
+    "security": "retire --exitwith 0 --outputpath scan-retire.txt && nsp check --output writefile --warn-only",
+    "clean": "rimraf ./tmp",
+    "test": "npm run security && npm run test:unit && npm run clean",
+    "test:coverage": "nyc check-coverage --lines 95 --functions 95 --branches 85 --statements 95",
+    "test:unit": "tap ./test/unit/* --color --bail --coverage --coverage-report=html && npm run test:coverage",
+    "test:integration": "grunt"
+  },
+  "standard": {
+    "ignore": [
+      "test/integration/**"
+    ]
+  }
 }
