--- a/package.json
+++ b/package.json
@@ -1,68 +1,109 @@
 {
   "name": "appc.box",
   "description": "Connector for the Box View API.",
-  "version": "1.1.0",
-  "author": "Rick Blalock",
+  "version": "1.1.0-0",
+  "author": {
+    "email": "support@axway.com",
+    "name": "Axway R&D",
+    "url": "https://axway.com"
+  },
   "license": "Apache-2.0",
-  "framework": "none",
   "keywords": [
     "appcelerator",
     "arrow",
     "box"
   ],
   "files": [
-    "dist"
+    "docs",
+    "dist",
+    "conf"
   ],
+  "babel": {
+    "presets": [
+      "env",
+      "stage-2"
+    ]
+  },
   "main": "dist/index.js",
-  "repository": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/appcelerator/appc.box"
+  },
   "private": true,
   "dependencies": {
-    "async": "^0.9.0",
-    "box-view": "^1.2.0",
-    "lodash": "^2.4.1",
-    "pkginfo": "^0.3.0"
+    "async": "2.6.0",
+    "box-view": "2.0.0",
+    "lodash": "4.17.4",
+    "pkginfo": "0.4.1"
   },
   "devDependencies": {
     "arrow": "*",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.0.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "cross-env": "5.1.1",
+    "npm-check": "5.5.2",
+    "nyc": "11.3.0",
+    "nsp": "3.1.0",
+    "retire": "1.4.0",
+    "rimraf": "2.6.2",
+    "sinon": "^4.1.3",
+    "snazzy": "7.0.0",
+    "standard": "10.0.3",
+    "tap": "11.0.0",
+    "tap-mocha-reporter": "3.0.6",
     "babel-istanbul": "^0.12.1",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-stage-2": "^6.22.0",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.1",
+    "grunt-mocha-test": "^0.13.2",
+    "mocha": "4.0.1",
+    "should": "13.1.3",
+    "eslint-config-standard": "11.0.0-beta.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-kahvesi": "^0.1.0",
-    "grunt-mocha-test": "^0.12.0",
-    "mocha": "3.3.0",
-    "nsp": "2.6.3",
-    "nyc": "10.2.0",
-    "request": "^2.55.0",
-    "retire": "1.2.12",
-    "rimraf": "2.6.1",
-    "should": "11.2.1",
-    "sinon": "2.1.0",
-    "snazzy": "7.0.0",
-    "standard": "10.0.2",
-    "tap": "10.3.2"
+    "babel-preset-env": "1.6.1",
+    "request": "2.83.0"
   },
   "scripts": {
     "start": "appc run",
-    "build": "npm run clean && npm run build:dev && npm run security",
-    "build:dev": "npm run build:dist",
-    "build:dist": "babel -d ./dist ./lib",
-    "lint": "standard --fix",
-    "security": "retire --exitwith 0 --outputpath scan-retire.json && nsp check --output json > scan-nsp.json",
-    "clean": "rimraf ./tmp && rimraf dist/* coverage/*",
-    "test": "npm run security && npm run test:unit && npm run clean",
-    "test:coverage": "nyc check-coverage --lines 95 --functions 95 --branches 85 --statements 95",
-    "test:unit": "tap ./test/unit/* --color --bail --coverage --coverage-report=html && npm run test:coverage",
-    "test:integration": "grunt"
+    "all": "npm i --no-optional && npm run clean && npm run lint:fix && npm run test && npm run build:dist && npm run security && npm run check:dependencies",
+    "build": "npm run clean && npm run build:dev && npm run check:dependencies && npm run security",
+    "build:dev": "npm run build:lint && npm run test && npm run build:dist",
+    "build:dist": "npm run transpile",
+    "build:lint": "standard | snazzy",
+    "test": "npm run clean:test && cross-env NODE_ENV=test npm run test:unit",
+    "test:unit": "tap test/unit/* --bail --coverage-report=html | tap-mocha-reporter spec",
+    "test:integration": "grunt",
+    "posttest": "nyc check-coverage --lines 80 --branches 80 --functions 80 || exit 0",
+    "release:publish": "git add -A && git push origin HEAD:master && git push origin HEAD:master --tags",
+    "release:major": "npm version major && npm run release:publish && git push origin HEAD:master --follow-tags",
+    "release:minor": "npm version minor && npm run release:publish && git push origin HEAD:master --follow-tags",
+    "release:patch": "npm version patch && npm run release:publish && git push origin HEAD:master --follow-tags",
+    "release:prerelease": "npm version prerelease && npm run release:publish && git push origin HEAD:master --follow-tags",
+    "release:npm": "curl -X GET http://registry.ecd.axway.int:8081/artifactory/local-npm/$npm_package_name/-/$npm_package_name-$npm_package_version.tgz 2>/dev/null > $npm_package_name-$npm_package_version.tgz && npm publish --registry  https://registry.npmjs.org ./$npm_package_name-$npm_package_version.tgz && rm ./$npm_package_name-$npm_package_version.tgz",
+    "security": "npm run security:retire && npm run security:nsp",
+    "security:retire": "retire --exitwith 0 --package --jspath ./dist --nodepath ./ --outputformat json --outputpath scan-retire.json",
+    "security:nsp": "nsp check --reporter json > scan-nsp.json --warn-only",
+    "clean": "rimraf dist coverage .nyc-output",
+    "clean:test": "rimraf coverage .nyc-output",
+    "lint:fix": "standard --fix | snazzy",
+    "check:dependencies": "npm-check || exit 0",
+    "transpile": "babel -d ./dist ./models ./lib"
   },
   "standard": {
     "ignore": [
+      ".nyc_output",
+      ".vscode",
+      "coverage",
+      "node_modules",
+      "dist",
+      "config",
       "test/integration/**"
     ]
+  },
+  "nyc": {
+    "include": "src"
   }
 }
