--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "nsp": "3.1.0",
     "retire": "1.4.0",
     "rimraf": "2.6.2",
-    "sinon": "^4.1.3",
+    "sinon": "2.1.0",
     "snazzy": "7.0.0",
     "standard": "10.0.3",
     "tap": "11.0.0",
